# sayou-opendart-mcp

./: .gitignore  README.md  opendarts.py  pyproject.toml  server.json  server.py  settings.json
.github/workflows/: publish-pypi.yml
docs/: claude_opendart_mcp.md  gemini_opendart_mcp.md  opendart_mcp_blog.md
tests/: .env-samples  tests_opendart.py
