[project]
name = "sayou-opendart-mcp"
version = "0.1.0"
description = "Deploying an OpenDart MCP server on Cloud Run"
authors = [
    { name = "Sayouzone", email = "cksdn2034@sayouzone.com" }
]
readme= "README.md"
license = { file = "./LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.12.4",
    "beautifulsoup4>=4.14.0",
    "pandas==2.3.3",
    "xmltodict==1.0.2",
    "sayou-stock>=0.2.0",
    "google-cloud-storage==3.5.0",
    "google-cloud-bigquery==3.38.0",
    "google-cloud-secret-manager==2.25.0",
    "lxml==6.0.2",
]

# -----------------
# 2. 프로젝트 링크 (PyPI 사이드바)
# -----------------
[project.urls]
"Homepage" = "https://www.sayouzone.com/"
"Repository" = "https://github.com/sayouzone/sayou-opendart-mcp"

# -----------------
# 3. 소스 코드 위치
# -----------------
[tool.hatch.build.targets.wheel]
packages = ["."]